# toms-gridding-simulation

./: .gitattributes  .gitignore  README.md  arrays.py  gridtools.py  main.py  observe.py  pyproject.toml  simulate.py
configs/: ngvla-revF.core.cfg  ngvla-revF.long.cfg  ngvla-revF.main.cfg  ngvla-revF.mid.cfg  ngvla-revF.sba.cfg  ngvla-revF.spiral.cfg
ml/: __init__.py  config.py  data.py  model.py
scripts/: _repo_path.py  demo_app.py  demo_config.py  demo_core.py  demo_ml_step.py  demo_observe.py  setup_notebooks.py
src/gridding_sim/: __init__.py  arrays.py  diagnostics.py  gridtools.py  imaging.py  observe.py  plotting.py  simulate.py
tests/: test_arrays.py  test_config_path.py  test_dirty_image_fft.py  test_grid_visibilities.py  test_local_equatorial.py  test_main.py  test_ml_data.py  test_ml_model.py  test_observe.py  test_point_source.py  test_read_cfg.py  test_simulate.py
